--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@
             </label>
             <button id="chat-button" onclick="sendChat()">Send</button>
 
-            <form action="/upload-image" method="post" enctype="multipart/form-data">
-                <label for="imageUpload">Upload an image:</label>
-                <input type="file" id="imageUpload" name="image" accept=".jpg">
-                <button type="submit">Send Image</button>
+            <form action="/upload-file" method="post" enctype="multipart/form-data">
+                <label for="imageUpload">Upload a File(MP4, JPG):</label>
+                <input type="file" id="imageUpload" name="image" accept=".jpg,.mp4">
+                <button type="submit">Send File</button>
             </form>
         </div>
 
