added files, change index

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
             <form action="/upload-file" method="post" enctype="multipart/form-data">
                 <label for="imageUpload">Upload a File(MP4, JPG):</label>
-                <input type="file" id="imageUpload" name="image" accept=".jpg,.mp4">
+                <input type="file" id="imageUpload" name="image" accept=".jpg,.mp4,.jpeg,.png,.gif">
                 <button type="submit">Send File</button>
             </form>
         </div>
