--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <button id="chat-button" onclick="sendChat()">Send</button>
 
             <form action="/upload-file" method="post" enctype="multipart/form-data">
-                <label for="imageUpload">Upload a File(MP4, JPG):</label>
+                <label for="imageUpload">Upload a File:</label>
                 <input type="file" id="imageUpload" name="image" accept=".jpg,.mp4,.jpeg,.png,.gif">
                 <button type="submit">Send File</button>
             </form>
