--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,7 @@
 
 
     <div class="user-list">
-
-
+        <ul id="userList"></ul>
         Register:
         <form action="/register" method="post" enctype="application/x-www-form-urlencoded">
             <label>Username:
@@ -91,13 +90,13 @@
             <label>Password:&nbsp;
                 <input id="login-form-pass" type="password" name="password_login">
             </label>
-            <input type="submit" value="Post">
+            <input type="submit" value="Post" onclick="liveuserlist('login')">
         </form>
         <form action="/login-spotify" method="post" enctype="application/x-www-form-urlencoded">
             <input type="submit" value="Login with Spotify">
         </form>
         <form action="/logout" method="post" enctype="application/x-www-form-urlencoded">
-            <input type="submit" value="Logout">
+            <input type="submit" value="Logout" onclick="liveuserlist('logout')">
         </form>
 
         <form action="/profile-pic" id="image-form" method="post" enctype="multipart/form-data">
