--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,8 @@
 
 
     <div class="user-list">
-        <ul id="userList"></ul>
+        <div id="userList"></div>
+
         Register:
         <form action="/register" method="post" enctype="application/x-www-form-urlencoded">
             <label>Username:
@@ -78,11 +79,11 @@
             <label>Password:&nbsp;
                 <input id="reg-form-pass" type="password" name="password_reg">
             </label>
-            <input type="submit" value="Post">
+            <input type="submit" value="Post" onclick="liveuserlist('logout')">
         </form>
 
         Login:
-        <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
+        <form id='login-form' action="/login" method="post" enctype="application/x-www-form-urlencoded">
             <label>Username:
                 <input id="login-form-username" type="text" name="username_login"/>
             </label>
@@ -90,13 +91,13 @@
             <label>Password:&nbsp;
                 <input id="login-form-pass" type="password" name="password_login">
             </label>
-            <input type="submit" value="Post" onclick="liveuserlist('login')">
+            <input type="submit" value="Post">
         </form>
         <form action="/login-spotify" method="post" enctype="application/x-www-form-urlencoded">
             <input type="submit" value="Login with Spotify">
         </form>
         <form action="/logout" method="post" enctype="application/x-www-form-urlencoded">
-            <input type="submit" value="Logout" onclick="liveuserlist('logout')">
+            <input type="submit" value="Logout">
         </form>
 
         <form action="/profile-pic" id="image-form" method="post" enctype="multipart/form-data">
