frontend mini update

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
 
 
     <div class="user-list">
+        Live User List:
         <div id="live-user-list"></div>
         Register:
         <form action="/register" method="post" enctype="application/x-www-form-urlencoded">
